--- a/src/scss/blocks/body.scss
+++ b/src/scss/blocks/body.scss
@@ -2,6 +2,10 @@ html {
   scroll-behavior: smooth;
 }
 body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
   background-color: #111;
   font-family: sans-serif;
   color: white;
